--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link href="nyt.css" rel="stylesheet">
   </head>
   <body>
-    <h1>NY Times video search</h1>
+    <h1>NY Times article search</h1>
 
     <div class="wrapper">
       <div class="controls">
